tests/src/frontend/typechecking/invalid/invalid_tparam_match_7.sk
fun no<V: Show>(x: V): Nullable<Int> {
  x match {
  | Int _ -> Null()
  }
}
